[BFN] https://test.kuali.org/jira/browse/KRAFUNC-244 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6782 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-budget.html
+++ b/kra-awa-dev/abud-budget.html
@@ -166,15 +166,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -215,15 +215,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -264,15 +264,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -313,15 +313,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -362,15 +362,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -411,15 +411,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
