--- a/kra-awa-dev/aw-budgetversions.html
+++ b/kra-awa-dev/aw-budgetversions.html
@@ -493,15 +493,15 @@
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -542,15 +542,15 @@
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -591,15 +591,15 @@
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -640,15 +640,15 @@
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -689,15 +689,15 @@
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
@@ -738,15 +738,15 @@
                             <table cellpadding=0 cellspacing="0" summary="" style="width:100%; border-right:none; border-collapse:collapse;"">
                                 <tbody id="G2" style="border-collapse:collapse;">
                                     <tr style="border-collapse:collapse;">
-                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
+                                        <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
-                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
+                                        <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type:</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
-                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A:</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update:</th>
                                         <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
