[BFN] https://test.kuali.org/jira/browse/KRAFUNC-110 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6783 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -1621,17 +1621,25 @@
                   </tr>
                   <tr>
                     <th style="vertical-align:top; text-align:left;">Award Modification</th>
-                    <td><table style="border:none;">
+                    <td>
+                    
+                    <table style="border:none;">
                         <tr>
-                          <td style="border:none; white-space:nowrap; padding:3px; text-align:right; width:130px;"> Award Version:
+                          <td style="border:none; white-space:nowrap; padding:3px; text-align:right; width:130px;">
+                            Award Version:
+                          </td>
+                          <td style="border:none; white-space:nowrap; padding:3px; text-align:left;">
                             <select name="op">
                               <option value="5" selected>5</option>
                               <option value="4">4</option>
                               <option value="3">3</option>
                               <option value="2">2</option>
                               <option value="1">1</option>
-                            </select></td>
+                            </select>
+                          </td>
                           <td style="border:none; white-space:nowrap; padding:3px; text-align:right;"> Transaction:
+                          </td>
+                          <td style="border:none; white-space:nowrap; padding:3px; text-align:left;">
                             <select name="op">
                               <option value="3" selected>00324</option>
                               <option value="2">00426</option>
@@ -1640,9 +1648,13 @@
                             <input src="../images/arrow_refresh.png" onclick="javascript: alert('This would update the Value description and options based on the Award Version pulldown.'); return false" class="tinybutton" alt="refresh" title="Refresh" type="image" />
                           </td>
                           <td style="border:none; white-space:nowrap; padding:3px; text-align:right;"> Signature Required:
+                          </td>
+                          <td style="border:none; white-space:nowrap; padding:3px; text-align:left;">
                             <input type="checkbox" class="nobord" name="Csigreq" value="0" checked="checked" /></td>
                         </tr>
-                      </table></td>
+                      </table>
+                      
+                      </td>
                     <td style="text-align:center;">
                     	<input src="../images/tinybutton-print.gif" onclick="javascript: alert('This would print the associated document.'); return false" style="border:none;" alt="print" title="Print" type="image" />
                     </td>
