--- a/kra/index.html
+++ b/kra/index.html
@@ -61,6 +61,7 @@ function MM_goToURL() { //v3.0
                       <p><a href="../kra-irb-dev/irb-protocol.html" target="_blank">IRB</a></p>
                       <p><a href="../kra-com-dev/irb-schedule.html" target="_blank">IRB - Committee</a></p>
                       <p><a href="../kra-com-dev/irb-meeting.html" target="_blank">IRB - Meeting Management</a></p>
+                      <p><a href="../kra-cor-dev/correspondence.html" target="_blank">IRB - Correspondence</a></p>
                       <p><a href="../BFN/questionnaire-editor.html" target="_blank">Questionnaire Management</a></p>
                       <p><a href="../kra-awa-dev/aw-awards.html" target="_blank">Awards</a></p>
                       <p><a href="../kra-coi-bfn/coi-disclosure.html" target="_blank">Conflict of Interest</a><a href="#" target="_blank"></a></p>
