git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6787 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-com-dev/irb-members.html
+++ b/kra-com-dev/irb-members.html
@@ -61,6 +61,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </span></dt>
       <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-schedule.html');return document.MM_returnValue" value="Schedule">
+        </span></dt>  <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-actions.html');return document.MM_returnValue" value="Actions">
         </span></dt>
     </dl>
   </div>
