--- a/kra-cor-dev/correspondence.html
+++ b/kra-cor-dev/correspondence.html
@@ -64,7 +64,7 @@ $(".browse").slideDown(500)}
             </tr>
           </table>
           <!-- TAB -->
-          <div class="tab-container" align=center id="G01" style="display: none;">
+          <div class="tab-container" align=center id="G01" style="display: nonee;">
             <div class="h2-container"><span class="subhead-left">
               <h2>Correspondance Templates</h2>
               </span><span class="subhead-right"><span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick=å"MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -75,7 +75,7 @@ $(".browse").slideDown(500)}
                 <td class="tab-subhead1">Approval Letter</td>
               </tr>
             </table>
-            <div id="G201sd" style="display: none; padding-left:56px">
+            <div id="G201sd" style="display: nonee; padding-left:56px">
               <div align="left"><br>
                 <strong>Default </strong><br>
                 <br>
