git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6789 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@ function MM_goToURL() { //v3.0
                         HTML Prototypes<br> 
                         </strong></p> 
                       <hr size="1">
-                      <p><a href="portal/kua-index-docs.html" target="_blank" >Index Page </a></p>
                       <p><a href="ib-multirow/ib-multi01.html" target="_blank">Internal Billing</a></p> 
                       <p><a href="kra-budget/parameters.html" target="_blank">Research - Budget</a></p>
                       <p><a href="kra-routing/parameters2.html" target="_blank">Researh - Routing Form </a></p> 
                       <p><a href="kra-proposal/lookup-award.html" target="_blank">C&amp;G - Award</a></p> 
                       <p><a href="kra-proposal/lookup-proposal.html" target="_blank">C&amp;G - Proposal</a></p>
-                      <p>test</p> 
+                      <p>&nbsp;</p> 
                       <p><a href="kra-routing/parameters2.html" target="_blank"></a></p>
                       </div></td> 
                 </tr> 
