git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6790 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@ function MM_goToURL() { //v3.0
 }
 //-->
 </script>
+<style type="text/css">
+<!--
+.aaa {
+	color: #F00;
+}
+-->
+</style>
 </head>
-<body>
+<body style="background-color:">
 <div class="headerarea" id="headerarea">
   <h1>Kuali - Mock Screens</h1>
 </div>
@@ -47,7 +54,7 @@ function MM_goToURL() { //v3.0
                       <p><a href="kra-proposal/lookup-award.html" target="_blank">C&amp;G - Award</a></p> 
                       <p><a href="kra-proposal/lookup-proposal.html" target="_blank">C&amp;G - Proposal</a></p>
                       <p>&nbsp;</p> 
-                      <p><a href="kra-routing/parameters2.html" target="_blank"></a></p>
+                      <p class="aaa">&bull;&bull;&bull;</p>
                       </div></td> 
                 </tr> 
               </table> 
