git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6792 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function MM_goToURL() { //v3.0
                       <p><a href="kra-proposal/lookup-award.html" target="_blank">C&amp;G - Award</a></p> 
                       <p><a href="kra-proposal/lookup-proposal.html" target="_blank">C&amp;G - Proposal</a></p>
                       <p>&nbsp;</p> 
-                      <p class="aaa">&bull;&bull;&bull;</p>
+                      <p class="aaa">&bull;&bull;&bull;&bull;&bull;&bull;</p>
                       </div></td> 
                 </tr> 
               </table> 
