--- a/kra-coi-bfn/coi-disclosure.html
+++ b/kra-coi-bfn/coi-disclosure.html
@@ -662,14 +662,14 @@ $(".na4").slideDown(500)}
           <!-- 4.	Financial Interests Details  -->
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Financial Interests History</td>
+              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Financial Interests</td>
               <td class="tabtable2-mid"><a href="#" id="A04" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F04" ></a></td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
           </table>
           <div class="tab-container" align="center" id="G04" style="display: none;">
 <div class="h2-container">
-              <h2><span class="subhead-left"> Financial Interests History</span></h2>
+              <h2><span class="subhead-left">Add Financial Interest</span></h2>
             </div>
             <table cellpadding=0 cellspacing=0 class="grid" summary="">
               <tr>
@@ -763,7 +763,7 @@ $(".na4").slideDown(500)}
               </tr>
               <tr>
                 <td width="50" nowrap class="tab-subhead1"><a href="#" id="A11" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F11"></a></td>
-                <td class="tab-subhead1">Barakat Pharmaceutical Industries s</td>
+                <td class="tab-subhead1"><img src="../images/exclamation.png" alt="attention" style="width:16px; height:16px; vertical-align:middle;"> Barakat Pharmaceutical Industries</td>
                 <td class="tab-subhead1">Board of Directors</td>
                 <td class="tab-subhead1">07/29/2009 03:59 PM crc</td>
                 <td nowrap class="tab-subhead1"><div align="center"><a href="#"><img src="../images/tinybutton-deactivate.gif" alt="add" width=64 height=15 hspace=3 vspace=3 border=0><img src="../images/tinybutton-edit1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
@@ -784,11 +784,11 @@ $(".na4").slideDown(500)}
                           <th align=left>Actions</th>
                         </tr>
                         <tr>
-                          <td align=left>Consultant</td>
+                          <td align=left><img src="../images/exclamation.png" alt="attention" style="width:16px; height:16px; vertical-align:middle;"> Consultant</td>
                           <td align=left>Docebam in illis annis artem rhetoricam, et victoriosam loquacitatem victus cupiditate vendebam. malebam tamen, domine, tu scis, bono</td>
                           <td align=left>07/29/2009 03:59 PM crc</td>
                           <td align=left>2008 Annual Disclosure, IRB Protocol 090810</td>
-                          <td align=left><div align="center"><a href="#"><img src="../images/tinybutton-view.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                          <td align=left><div align="center"><a href="#"><img src="../images/tinybutton-complete.gif" alt="complete" width=60 height=15 hspace=3 vspace=3 border=0></a></div></td>
                         </tr>
                         <tr>
                           <td align=left>Consultant</td>
@@ -798,11 +798,11 @@ $(".na4").slideDown(500)}
                           <td align=left><div align="center"><a href="#"><img src="../images/tinybutton-view.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                         </tr>
                         <tr>
-                          <td align=left>Consultant</td>
+                          <td align=left><img src="../images/exclamation.png" alt="attention" style="width:16px; height:16px; vertical-align:middle;"> Consultant</td>
                           <td align=left>aciam libero studio, non necessitate rei familiaris sectaris. quo magis mihi te oportet de illa credere, qui eam tam perfecte discere elaboravi, quam ex e</td>
                           <td align=left>07/29/2009 03:59 PM crc</td>
                           <td align=left>2008 Annual Disclosure, IRB Protocol 090810</td>
-                          <td align=left><div align="center"><a href="#"><img src="../images/tinybutton-view.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                          <td align=left><div align="center"><a href="#"><img src="../images/tinybutton-complete.gif" alt="complete" width=60 height=15 hspace=3 vspace=3 border=0></a></div></td>
                         </tr>
                         <tr>
                           <td align=left>Consultant</td>
