--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -156,12 +156,12 @@ Page
           </div>  <!-- end Reporting Requirements tab -->
   
 <!-- Lookup: Bring data back to page -->
-<table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
+<table style="border:none; width:100%; background:none;" cellpadding="0" cellspacing="0">
 	<tr>
-    	<td style="border:none;">
+    	<td style="border:none; background:none;">
 			<input type="text" style="width:100%;" value="" />
         </td>
-        <td style="border:none; width:20px; vertical-align:bottom; text-align:center;">
+        <td style="border:none; width:20px; vertical-align:bottom; text-align:center; background:none;">
 			<input name="x" src="../images/searchicon.gif" onclick="javascript: alert('This would open a lookup for this field.'); return false" class="tinybutton" align="top" alt="Search " title="Search " border="0" type="image" />
 		</td>
     </tr>
