--- a/kra-ip-dev/1-prop-actions.html
+++ b/kra-ip-dev/1-prop-actions.html
@@ -274,24 +274,44 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </table>
             <div class="tab-container" align="center" id="G04" style="display: none;"><br>
               <div class="h2-container">
-                <h2><span class="subhead-left">Print Reports</span> </h2>
+                <h2><span class="subhead-left">Print </span> </h2>
                 <span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
-              <table  cellpAdding="0" cellspacing="0"  summary="">
-                <tbody >
+              <table  cellpadding="0" cellspacing="0"  summary="">
+               
+                <tr>
+                  <td width="5%" class="tab-subhead" ><a href="#" id="A222" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align="absmiddle" id="F222"></a></td>
+                  <td colspan="3" class="tab-subhead" >Print Notice</td>
+                </tr>
+                <tbody id="G222" style="display: none;">
                   <tr>
-                    <th  >Print Proposal Notice</th>
-                    <th  >Current &amp; Pending Support</th>
+                    <td align="left" >&nbsp;</td>
+                    <td colspan="2">Proposal Notice</td>
+                    <td><div align=center><img src="../images/tinybutton-print.gif" alt="dsdfhg" width="42" height="15" vspace="5"></div></td>
+                  </tr>
+                
+                </tbody>
+                <tr>
+                  <td class="tab-subhead" ><a href="#" id="A248" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align="absmiddle" id="F248"></a></td>
+                  <td colspan="3" class="tab-subhead" >Print Reports</td>
+                </tr>
+                <tbody id="G248" style="display: none;">
+                  <tr>
+                    <td>&nbsp;</td>
+                    <td>Current Support Report</td>
+                    <td><div align="center"><span class="nowrap">
+                      <input name="incomeList[0].fin_object_cd232" size=30 value="" type=text id="person">
+                      <input name="imageField2" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                    </span></div></td>
+                    <td><div align="center"><img src="../images/tinybutton-initiatereport.gif" alt="initiate report" width="80" height="15" vspace="5"></div></td>
                   </tr>
                   <tr>
-                    <td  ><div class="floaters" align="center" style="text-align:center;"><img src="../images/tinybutton-viewnotice.gif" alt="dsdfhg" width="69" height="15" vspace="5" align="absmiddle"></div></td>
-                    <td  ><div class="floaters"  align="center" style="text-align:center;">
-                        <select name="select" id="select">
-                          <option selected>Godfrey, Alberta D</option>
-                          <option> Mays, Lyle</option>
-                          <option>Coltrane, John</option>
-                        </select>
-                        <span class="infoline" style="text-align:center;"><br>
-                        <img src="../images/tinybutton-viewreport.gif" alt="view report" width="69" height="15" vspace="5" align="absmiddle" onClick="MM_openBrWindow('1-prop-cp1.html','','scrollbars=yes,resizable=yes,width=1000,height=640')"></span></div></td>
+                    <td>&nbsp;</td>
+                    <td>Pending Support Report</td>
+                    <td><div align="center"><span class="nowrap">
+                      <input name="incomeList[0].fin_object_cd232" size=30 value="" type=text id="person">
+                      <input name="imageField2" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                    </span></div></td>
+                    <td><div align="center"><img src="../images/tinybutton-initiatereport.gif" alt="initiate report" width="80" height="15" vspace="5"></div></td>
                   </tr>
                 </tbody>
               </table>
